--- a/website/newsletter/184/index.mdx
+++ b/website/newsletter/184/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /184
-title: "This Week In React #184: Patching globals, Expo, React Aria, Headless UI, Strict Mode, Next.js, Mitosis, Twofold, Terminosaurus, Docusaurus, MST, Remix-SaaS, VisionCamera, Reanimated, VisionOS, Apollo, Vite, Node, Hono ..."
+title: "This Week In React #184: Patching globals, Expo, React Aria, Headless UI, Strict Mode, DevTools, Next.js, Mitosis, Twofold, Terminosaurus, Docusaurus, MST, Remix-SaaS, VisionCamera, Reanimated, VisionOS, Apollo, Vite, Node, Hono ..."
 authors: [slorber]
 date: 05-08-2024
-unlisted: true
 ---
 
 Hi everyone!
