--- a/website/newsletter/185/index.mdx
+++ b/website/newsletter/185/index.mdx
@@ -1,26 +1,25 @@
 ---
 slug: /185
-title: "This Week In React #185: ..."
+title: "This Week In React #185: React Conf, useDeferredValue, React Query, refs, Next.js after, mini-react, Astro, MDXTS, Radix, Solid, Redwood, Pigment, Apollo, Playwright, Re.Pack, RN-Model3D, RN perf, RN Video, VisionOS, LiveView, Anchor Positioning ..."
 authors: [slorber]
 date: 05-15-2024
-unlisted: true
 ---
 
 Hi everyone!
 
-- INTRO: 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) -  Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”.
+This week is calm in terms of releases, so far at least!. We have great React articles, but also some criticisms, or content that suggests we use alternative solutions (Solid, Phoenix LiveView) 😅.
 
-Promo confs
+React Conf starts later today! We can expect great things to be presented there, that we'll cover next week. I sent the newsletter a bit earlier today to make sure I can watch it live without any pressure 😄.
 
-Chain React Intro
-
-React Conf starts later today! The [YouTube live stream link](https://www.youtube.com/watch?v=T8TZQ6k4SLE) is already available. Looking at the [conf agenda](https://conf.react.dev/agenda), we are particularly excited about the following talks:
+The [React Conf YouTube live stream link](https://www.youtube.com/watch?v=T8TZQ6k4SLE) is already available. Looking at the [conf agenda](https://conf.react.dev/agenda), we are particularly excited about the following talks:
 
 - React and React Native keynotes and Q&A
 - Universal React Server Components in Expo Router - Evan Bacon - Expo
 - Real-time server components - Sunil Pai - PartyKit
 - Spatial computing with React - Michał Pierzchała - Callstack
 - Cross Platform React - Olga Zinoveva and Naman Goel - Meta
+
+Speaking of conferences, the U.S. React Native Conference [**Chain React**](https://chainreactconf.com/?utm_source=thisweekinreact) is back on July 17-19 (Portland/OR). We partnered to offer you 15% off your ticket with code “TWIR”.
 
 **💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
 
@@ -85,6 +84,7 @@ Dominik Dorfmeister is launching his official React Query course, and for the oc
 - 📦 [MDXTS 1.0 - New tool for building content and documenting libraries with MDX, TypeScript, and React](https://www.mdxts.dev/blog/introducing-mdxts)
 - 🕹 [Athena Crisis is now Open Source](https://cpojer.net/posts/athena-crisis-open-source): Christoph Nakazawa (Jest, Metro…) created a full retro indie game available on Steam. The React-DOM codebase is now open source with bounties available for contributors.
 - 🎥 [Theo - This Release Makes Me Want To Leave React](https://www.youtube.com/watch?v=aOk67eT3fpg): Phoenix LiveView [1.0 RC is out](https://www.phoenixframework.org/blog/phoenix-liveview-1.0-released) and solves problems similar to React Server Components in interesting ways. Updates can be sent to the client in real time by maintaining a WebSocket connection to the server. Note there’s an exciting React Conf talk later today on this topic: Real-time server components.
+- 🎥 [React Conf - YouTube live stream](https://www.youtube.com/watch?v=T8TZQ6k4SLE)
 
 <SubscribeFormEmbed placement="middle" />
 
